--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "@types/node": "^18.6.4",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/supertest": "^2.0.12",
     "css-loader": "^6.7.1",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "nodemon": "^2.0.19",
     "style-loader": "^3.3.1",
+    "superagent": "^8.0.0",
+    "supertest": "^6.2.4",
     "ts-jest": "^28.0.7",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
